--- a/styles.css
+++ b/styles.css
@@ -144,22 +144,25 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 9999;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-content {
     background-color: azure;
-    margin: 15% auto;
-    padding: 10px;
+    margin: auto;
+    padding: 20px;
     border: 1px solid #888;
-    width: 50%;
-    height: fit-content;
+    width: 80%;
+    max-width: 600px;
+    box-sizing: border-box;
 }
 
 .close {
