--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 
 .left, .right {
     flex: 1;
-    z-index: 1;
+    z-index: 0;
 }
 
 .right {
@@ -145,23 +145,24 @@
     display: none;
     position: fixed;
     z-index: 9999;
-    left: 0;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
-    justify-content: center;
-    align-items: center;
 }
 
 .modal-content {
+    margin-left: 50%;
     background-color: azure;
-    margin: auto;
+    z-index: 9999;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
     max-width: 600px;
+    height: 80%;
+    overflow-y: auto;
     box-sizing: border-box;
 }
 
